minor alignment improvements, make sure the web-app page can be refreshed after deployments

--- a/web/app/styles/bridge-finder.scss
+++ b/web/app/styles/bridge-finder.scss
@@ -23,6 +23,7 @@
 #bridge-finder,
 .ready-block {
   font-size: 16px;
+  text-align: center;
 
   #intro {
     text-align: center;
@@ -67,13 +68,6 @@
 
   &:hover {
     background-color: darken(#f44336, 7%) !important;
-  }
-}
-
-@media (min-width: 769px) {
-  #bridge-finder,
-  .ready-block {
-    text-align: center;
   }
 }
 
